reference/5.1/Microsoft.PowerShell.Management/Get-ItemPropertyValue.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/get-itempropertyvalue?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Get-ItemPropertyValue
ms.openlocfilehash: 2dbbbfeac3810f79b976b6a68ab3089e91707fb3
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93194170"
---
# <span data-ttu-id="4ca97-103">Get-ItemPropertyValue</span><span class="sxs-lookup"><span data-stu-id="4ca97-103">Get-ItemPropertyValue</span></span>

## <span data-ttu-id="4ca97-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="4ca97-104">SYNOPSIS</span></span>
<span data-ttu-id="4ca97-105">Obtém o valor de uma ou mais propriedades de um item especificado.</span><span class="sxs-lookup"><span data-stu-id="4ca97-105">Gets the value for one or more properties of a specified item.</span></span>

## <span data-ttu-id="4ca97-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="4ca97-106">SYNTAX</span></span>

### <span data-ttu-id="4ca97-107">Caminho (padrão)</span><span class="sxs-lookup"><span data-stu-id="4ca97-107">Path (Default)</span></span>

```
Get-ItemPropertyValue [[-Path] <String[]>] [-Name] <String[]> [-Filter <String>] [-Include <String[]>]
 [-Exclude <String[]>] [-Credential <PSCredential>] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="4ca97-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="4ca97-108">LiteralPath</span></span>

```
Get-ItemPropertyValue -LiteralPath <String[]> [-Name] <String[]> [-Filter <String>] [-Include <String[]>]
 [-Exclude <String[]>] [-Credential <PSCredential>] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="4ca97-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="4ca97-109">DESCRIPTION</span></span>

<span data-ttu-id="4ca97-110">O `Get-ItemPropertyValue` Obtém o valor atual para uma propriedade que você especifica quando usa o parâmetro *Name* , localizado em um caminho que você especifica com os parâmetros *Path* ou *LiteralPath* .</span><span class="sxs-lookup"><span data-stu-id="4ca97-110">The `Get-ItemPropertyValue` gets the current value for a property that you specify when you use the *Name* parameter, located in a path that you specify with either the *Path* or *LiteralPath* parameters.</span></span>

## <span data-ttu-id="4ca97-111">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="4ca97-111">EXAMPLES</span></span>

### <span data-ttu-id="4ca97-112">Exemplo 1: obter o valor da propriedade ProductID</span><span class="sxs-lookup"><span data-stu-id="4ca97-112">Example 1: Get the value of the ProductID property</span></span>

<span data-ttu-id="4ca97-113">Esse comando obtém o valor da propriedade **ProductID** do objeto "\SOFTWARE\Microsoft\Windows NT\CurrentVersion" no provedor de registro do Windows.</span><span class="sxs-lookup"><span data-stu-id="4ca97-113">This command gets the value of the **ProductID** property of the "\SOFTWARE\Microsoft\Windows NT\CurrentVersion" object in the Windows Registry provider.</span></span>

```powershell
Get-ItemPropertyValue 'HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion' -Name ProductID
```

```output
94253-50000-11141-AA785
```

### <span data-ttu-id="4ca97-114">Exemplo 2: obter a hora da última gravação de um arquivo ou pasta</span><span class="sxs-lookup"><span data-stu-id="4ca97-114">Example 2: Get the last write time of a file or folder</span></span>

<span data-ttu-id="4ca97-115">Esse comando obtém o valor da propriedade **LastWriteTime** , ou a última vez que um arquivo ou pasta foi alterado, da pasta "C:\Users\Test\Documents\ModuleToAssembly", trabalhando no provedor FileSystem.</span><span class="sxs-lookup"><span data-stu-id="4ca97-115">This command gets the value of the **LastWriteTime** property, or the last time a file or folder was changed, from the "C:\Users\Test\Documents\ModuleToAssembly" folder, working in the FileSystem provider.</span></span>

```powershell
Get-ItemPropertyValue -Path C:\Users\Test\Documents\ModuleToAssembly -Name LastWriteTime
```

```output
Wednesday, September 3, 2014 2:53:22 PM
```

### <span data-ttu-id="4ca97-116">Exemplo 3: obter vários valores de propriedade de um arquivo ou pasta</span><span class="sxs-lookup"><span data-stu-id="4ca97-116">Example 3: Get multiple property values of a file or folder</span></span>

<span data-ttu-id="4ca97-117">Esse comando obtém os valores das propriedades **LastWriteTime** , **CreationTime** e **root** de uma pasta.</span><span class="sxs-lookup"><span data-stu-id="4ca97-117">This command gets the values of the **LastWriteTime** , **CreationTime** , and **Root** properties of a folder.</span></span>
<span data-ttu-id="4ca97-118">Os valores de propriedade são retornados na ordem em que você especificou os nomes de propriedade.</span><span class="sxs-lookup"><span data-stu-id="4ca97-118">The property values are returned in the order in which you specified the property names.</span></span>

```powershell
Get-ItemPropertyValue -Path C:\Users\Test\Documents\ModuleToAssembly -Name LastWriteTime,CreationTime,Root
```

```output
Wednesday, September 3, 2014 2:53:22 PM
Wednesday, September 3, 2014 2:53:10 PM

Name              : C:\
Parent            :
Exists            : True
Root              : C:\
FullName          : C:\
Extension         :
CreationTime      : 9/1/2014 4:59:45 AM
CreationTimeUtc   : 9/1/2014 11:59:45 AM
LastAccessTime    : 9/27/2014 5:22:02 PM
LastAccessTimeUtc : 9/28/2014 12:22:02 AM
LastWriteTime     : 9/27/2014 5:22:02 PM
LastWriteTimeUtc  : 9/28/2014 12:22:02 AM
Attributes        : Hidden, System, Directory
BaseName          : C:\
Target            :
LinkType          :
Mode              : d--hs-
```

## <span data-ttu-id="4ca97-119">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="4ca97-119">PARAMETERS</span></span>

### <span data-ttu-id="4ca97-120">-Credential</span><span class="sxs-lookup"><span data-stu-id="4ca97-120">-Credential</span></span>

<span data-ttu-id="4ca97-121">Especifica uma conta de usuário que tem permissão para executar esta ação.</span><span class="sxs-lookup"><span data-stu-id="4ca97-121">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="4ca97-122">O padrão é o usuário atual.</span><span class="sxs-lookup"><span data-stu-id="4ca97-122">The default is the current user.</span></span>

<span data-ttu-id="4ca97-123">Digite um nome de usuário, como "User01" ou "Domínio01 \ Usuário01", ou insira um objeto **PSCredential** , como um gerado pelo `Get-Credential` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="4ca97-123">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="4ca97-124">Se você digitar um nome de usuário, uma senha será solicitada.</span><span class="sxs-lookup"><span data-stu-id="4ca97-124">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="4ca97-125">Nenhum provedor instalado com o Windows PowerShell dá suporte a esse parâmetro.</span><span class="sxs-lookup"><span data-stu-id="4ca97-125">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="4ca97-126">-Excluir</span><span class="sxs-lookup"><span data-stu-id="4ca97-126">-Exclude</span></span>

<span data-ttu-id="4ca97-127">Especifica, como uma matriz de cadeia de caracteres, um item ou itens que esse cmdlet exclui da operação.</span><span class="sxs-lookup"><span data-stu-id="4ca97-127">Specifies, as a string array, an item or items that this cmdlet excludes from the operation.</span></span>
<span data-ttu-id="4ca97-128">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="4ca97-128">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="4ca97-129">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="4ca97-129">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="4ca97-130">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="4ca97-130">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="4ca97-131">-Filter</span><span class="sxs-lookup"><span data-stu-id="4ca97-131">-Filter</span></span>

<span data-ttu-id="4ca97-132">Especifica um filtro no formato ou idioma do provedor.</span><span class="sxs-lookup"><span data-stu-id="4ca97-132">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="4ca97-133">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="4ca97-133">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="4ca97-134">A sintaxe do filtro, incluindo o uso de caracteres curinga, depende do provedor.</span><span class="sxs-lookup"><span data-stu-id="4ca97-134">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="4ca97-135">Os filtros são mais eficientes do que outros parâmetros, porque o provedor os aplica quando o cmdlet obtém os objetos em vez de fazer com que o PowerShell filtre os objetos depois que eles são recuperados.</span><span class="sxs-lookup"><span data-stu-id="4ca97-135">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="4ca97-136">-Incluir</span><span class="sxs-lookup"><span data-stu-id="4ca97-136">-Include</span></span>

<span data-ttu-id="4ca97-137">Especifica, como uma matriz de cadeia de caracteres, um item ou itens que esse cmdlet inclui na operação.</span><span class="sxs-lookup"><span data-stu-id="4ca97-137">Specifies, as a string array, an item or items that this cmdlet includes in the operation.</span></span>
<span data-ttu-id="4ca97-138">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="4ca97-138">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="4ca97-139">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="4ca97-139">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="4ca97-140">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="4ca97-140">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="4ca97-141">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="4ca97-141">-LiteralPath</span></span>

<span data-ttu-id="4ca97-142">Especifica o caminho para o local atual da propriedade.</span><span class="sxs-lookup"><span data-stu-id="4ca97-142">Specifies the path to the current location of the property.</span></span>
<span data-ttu-id="4ca97-143">Ao contrário do parâmetro **Path** , o valor de **LiteralPath** é usado exatamente como digitado.</span><span class="sxs-lookup"><span data-stu-id="4ca97-143">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="4ca97-144">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="4ca97-144">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="4ca97-145">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="4ca97-145">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="4ca97-146">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="4ca97-146">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="4ca97-147">-Name</span><span class="sxs-lookup"><span data-stu-id="4ca97-147">-Name</span></span>

<span data-ttu-id="4ca97-148">Especifica o nome da propriedade ou propriedades para recuperar.</span><span class="sxs-lookup"><span data-stu-id="4ca97-148">Specifies the name of the property or properties to retrieve.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="4ca97-149">-Path</span><span class="sxs-lookup"><span data-stu-id="4ca97-149">-Path</span></span>

<span data-ttu-id="4ca97-150">Especifica o caminho para o(s) item(ns).</span><span class="sxs-lookup"><span data-stu-id="4ca97-150">Specifies the path to the item or items.</span></span>

```yaml
Type: System.String[]
Parameter Sets: Path
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="4ca97-151">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="4ca97-151">-UseTransaction</span></span>

<span data-ttu-id="4ca97-152">Inclui o comando na transação ativa.</span><span class="sxs-lookup"><span data-stu-id="4ca97-152">Includes the command in the active transaction.</span></span>
<span data-ttu-id="4ca97-153">Este parâmetro é válido somente quando uma transação está em andamento.</span><span class="sxs-lookup"><span data-stu-id="4ca97-153">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="4ca97-154">Para obter mais informações, consulte about_Transactions.</span><span class="sxs-lookup"><span data-stu-id="4ca97-154">For more information, see about_Transactions.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="4ca97-155">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="4ca97-155">CommonParameters</span></span>

<span data-ttu-id="4ca97-156">Esse cmdlet oferece suporte aos parâmetros comuns:,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` e `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="4ca97-156">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="4ca97-157">Para obter mais informações, confira [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="4ca97-157">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="4ca97-158">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="4ca97-158">INPUTS</span></span>

### <span data-ttu-id="4ca97-159">System.String</span><span class="sxs-lookup"><span data-stu-id="4ca97-159">System.String</span></span>

<span data-ttu-id="4ca97-160">É possível canalizar uma cadeia de caracteres que contém um caminho para esse cmdlet.</span><span class="sxs-lookup"><span data-stu-id="4ca97-160">You can pipe a string that contains a path to this cmdlet.</span></span>

## <span data-ttu-id="4ca97-161">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="4ca97-161">OUTPUTS</span></span>

### <span data-ttu-id="4ca97-162">System. booliano, System. String, System. DateTime</span><span class="sxs-lookup"><span data-stu-id="4ca97-162">System.Boolean, System.String, System.DateTime</span></span>

<span data-ttu-id="4ca97-163">Esse cmdlet retorna um objeto para cada valor de propriedade de item que obtém.</span><span class="sxs-lookup"><span data-stu-id="4ca97-163">This cmdlet returns an object for each item property value that it gets.</span></span>
<span data-ttu-id="4ca97-164">O tipo de objeto depende do valor da propriedade que é recuperado.</span><span class="sxs-lookup"><span data-stu-id="4ca97-164">The object type depends on the property value that is retrieved.</span></span>
<span data-ttu-id="4ca97-165">Por exemplo, em uma unidade do sistema de arquivos, o cmdlet pode retornar um arquivo ou uma pasta.</span><span class="sxs-lookup"><span data-stu-id="4ca97-165">For example, in a file system drive, the cmdlet might return a file or folder.</span></span>

## <span data-ttu-id="4ca97-166">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="4ca97-166">NOTES</span></span>

<span data-ttu-id="4ca97-167">Esse cmdlet foi projetado para trabalhar com os dados expostos por qualquer provedor.</span><span class="sxs-lookup"><span data-stu-id="4ca97-167">This cmdlet is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="4ca97-168">Para listar os provedores disponíveis em sua sessão, execute o `Get-PSProvider` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="4ca97-168">To list the providers available in your session, run the `Get-PSProvider` cmdlet.</span></span> <span data-ttu-id="4ca97-169">Para obter mais informações, consulte about_Providers.</span><span class="sxs-lookup"><span data-stu-id="4ca97-169">For more information, see about_Providers.</span></span>

## <span data-ttu-id="4ca97-170">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="4ca97-170">RELATED LINKS</span></span>

[<span data-ttu-id="4ca97-171">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-171">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="4ca97-172">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-172">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="4ca97-173">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-173">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="4ca97-174">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-174">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="4ca97-175">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-175">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="4ca97-176">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-176">Remove-ItemProperty</span></span>](Remove-ItemProperty.md)

[<span data-ttu-id="4ca97-177">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-177">Rename-ItemProperty</span></span>](Rename-ItemProperty.md)

[<span data-ttu-id="4ca97-178">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="4ca97-178">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="4ca97-179">Get-PSProvider</span><span class="sxs-lookup"><span data-stu-id="4ca97-179">Get-PSProvider</span></span>](Get-PSProvider.md)
